[package]
name = "trading_systems"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "3.0.0"
crossbeam = "0.8.4"
dashmap = "6.1.0"
proptest = "1.9.0"
rocksdb = "0.24.0"
rust_decimal = "1.39.0"
serde = "1.0.228"
serde_json = "1.0.148"
sha2 = "0.10.9"
tokio = "1.48.0"
typed-arena = "2.0.2"
