[package]
name = "trading_systems"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3.31"

# Concurrency primitives
crossbeam = "0.8.4"
dashmap = "6.1.0"
typed-arena = "2.0.2"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
bincode = "3.0.0"

# Database
rocksdb = "0.24.0"

# Decimal math
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"

# WebSocket
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
url = "2.5.7"

# Metrics
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"

# Crypto
sha2 = "0.10.9"

# Testing
proptest = "1.9.0"

# Random number generation
rand = "0.9.2"

[dev-dependencies]
proptest = "1.9.0"
